--- a/Editor/Editor/index.html
+++ b/Editor/Editor/index.html
@@ -42,6 +42,6 @@
       require('./renderer.js');
       //createConnection();
     </script>
-    <!-- script src="http://code.responsivevoice.org/responsivevoice.js"></script> -->
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
   </body>
 </html>
