--- a/Editor/Editor/index.html
+++ b/Editor/Editor/index.html
@@ -10,6 +10,7 @@
       <button id="start-surface" onclick="startSurface();">Start Surface</button>
       <button id="reset-surface" onclick="resetSurface();">Reset Surface</button>
       <button id="stop-surface" onclick="stopSurface();">Stop Surface</button>
+      <button id="say-hello" onclick="sayHello();">Say Hello!</button>
     </div>
     <div class="rate-voice-wrapper">
       <span>TTS Delay:</span>
