--- a/Editor/Editor/index.html
+++ b/Editor/Editor/index.html
@@ -14,9 +14,9 @@
     </div>
     <div class="rate-voice-wrapper">
       <span>TTS Delay:</span>
-      <input id="delay" type="number" step="1" min="0" value="0">
+      <input id="delay" type="number" step="1" min="0" value="12">
       <span id="rate-text">TTS Rate:</span>
-      <input id="rate" type="number" step="0.1" min="0" max="1.5" value="1">
+      <input id="rate" type="number" step="0.1" min="0" max="1.5" value=".8">
       <span class="voice-text">Voice:</span>
       <select id="voice" name="voice">
         <option value="female">US English Female</option>
