Added functions for reading all json objects

--- a/Editor/Editor_OneAct/index.html
+++ b/Editor/Editor_OneAct/index.html
@@ -47,6 +47,7 @@
         <button id="Frank" onclick="callFrank();">Frank</button>
         <button id="Fake" onclick="callFake();">Fake</button>
         <button id="Reddit" onclick="callReddit();">Reddit</button>
+        <button id="Funny" onclick="callFunny();">Funny</button>
       </div>
     </div>
     <script type="text/javascript" src="./renderer.js"></script>
