--- a/Editor/Editor_OneAct/index.html
+++ b/Editor/Editor_OneAct/index.html
@@ -15,7 +15,7 @@
     <div class="surface-buttons">
       <button id="warn" onclick="firecue('warn')">Warn</button>
       <button id="startshow" onclick="fireCue('start')";">Start</button>
-      <button id="intro" onclick="fireCue('intro')">Intro</button>
+      <button id="intro" onclick="sayIntro()">Intro</button>
       <button id="birth" onclick="fireCue('birth')">Birth</button>
       <button id="level1" onclick="fireCue('level1')">Level 1</button>
       <button id="level2" onclick="fireCue('level2')">Level 2</button>
@@ -26,7 +26,7 @@
     </div>
     <div class="rate-voice-wrapper">
       <span>TTS Delay:</span>
-      <input id="delay" type="number" step="1" min="0" value="12">
+      <input id="delay" type="number" step="1" min="0" value="0">
       <span id="rate-text">TTS Rate:</span>
       <input id="rate" type="number" step="0.1" min="0" max="1.5" value=".8">
       <span class="voice-text">Voice:</span>
@@ -51,10 +51,10 @@
         <button id="submit" onclick="submitQuestions(event);">Speak</button>
         <button id="ask" onclick="askQuestion(event);">End Speech</button>
         <button id="comment" onclick="tellComment(event);">Comment</button>
-        <button id="refresh" onclick="sendRefresh();">Question</button>
-        <button id="Frank" onclick="sendFrank();">Frank</button>
-        <button id="Fake" onclick="sendFake();">Fake</button>
-        <button id="Reddit" onclick="sendReddit();">Reddit</button>
+        <button id="refresh" onclick="sendRefresh('questions');">Question</button>
+        <button id="Frank" onclick="sendRefresh('frank');">Frank</button>
+        <button id="Fake" onclick="sendRefresh('fake');">Fake</button>
+        <button id="Reddit" onclick="sendRefresh('reddit');">Reddit</button>
         <button id="Funny" onclick="sendFunny();">Funny</button>
         <button id="More" onclick="sendTell();">Tell</button>
       </div>
