--- a/Editor/Editor_OneAct/index.html
+++ b/Editor/Editor_OneAct/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="surface-buttons">
-      <button id="warn" onclick="firecue('warn')">Warn</button>
+      <button id="warn" onclick="fireCue('warn')">Warn</button>
       <button id="startshow" onclick="fireCue('start')";">Start</button>
       <button id="intro" onclick="sayIntro()">Intro</button>
       <button id="birth" onclick="fireCue('birth')">Birth</button>
